// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hoc applies a higher order component 1`] = `
Object {
  "test": "value",
}
`;

exports[`Hoc calls render with the resulting props 1`] = `
Object {
  "n": 1,
}
`;
